# agent-paranoid-android

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  release.yml  scorecard.yml  security.yml
docs/: agent_design.md  ai_integration.md  architecture.puml  architecture_agent_workflow.puml  architecture_safety_boundaries.puml  dataset_profile_and_spec.md  domain_agnostic_refactoring_plan.md  domain_agnostic_workflow.md  implementation_map.md  index.md  mcp_examples.md  mcp_generator_design.md  public_release_checklist.md  release.md  roadmap.md
docs/concepts/: dataset-spec-compatibility.md  profiles-and-specs.md  safety-model.md
docs/getting-started/: first-csv.md  installation.md  related-tables.md  review-output.md
docs/how-to/: business-rules.md  mcp.md
docs/operations/: audit-logging.md  migrating-to-0.6.md  troubleshooting.md
docs/reference/: cli.md  configuration.md
examples/: orders_profile.json  orders_rules.yaml  trino_safe_profile.json
openspec/: project.md
openspec/changes/: README.md
openspec/changes/_template/: design.md  proposal.md  tasks.md
openspec/changes/_template/specs/capability/: spec.md
openspec/changes/agent-orchestration/: design.md  proposal.md  tasks.md
openspec/changes/agent-orchestration/specs/agent-orchestration/: spec.md
openspec/changes/dataset-spec-only/: design.md  proposal.md  tasks.md
openspec/changes/dataset-spec-only/specs/synthetic-generation/: spec.md
openspec/changes/mcp-business-rules/: design.md  proposal.md  tasks.md
openspec/changes/mcp-business-rules/specs/safe-mcp-workflow/: spec.md
openspec/changes/post-mvp-hardening/: design.md  proposal.md  tasks.md
openspec/changes/post-mvp-hardening/specs/safe-mcp-workflow/: spec.md
openspec/changes/post-mvp-hardening/specs/synthetic-generation/: spec.md
openspec/changes/pypi-trusted-publishing/: design.md  proposal.md  tasks.md
openspec/changes/pypi-trusted-publishing/specs/release-supply-chain/: spec.md
openspec/specs/agent-orchestration/: spec.md
openspec/specs/dataset-validation/: spec.md
openspec/specs/release-supply-chain/: spec.md
openspec/specs/safe-csv-profiling/: spec.md
openspec/specs/safe-mcp-workflow/: spec.md
openspec/specs/synthetic-generation/: spec.md
prompts/: developer.md  system.md  user_template.md  user_template_csv.md
schemas/: dataset_spec.schema.json
scripts/: check_installed_package.py  check_pypi_artifacts.py  check_release.sh  check_release_tag.py  domain_agnostic_refactor.py  export_dataset_schema.py  run_ai_demo.py  verify_pypi_release.py
src/test_data_agent/: __init__.py  agent.py  audit.py  business_rules.py  business_validator.py  cli.py  csv_profiler.py  generator.py  mcp_generator_server.py  mcp_trino_server.py  migration.py  profile_types.py  rules_engine.py  safety.py  scenario.py  spec.py  validator.py  version.py
src/test_data_agent/adapters/: __init__.py  csv_file.py  csv_folder.py  json_profile.py  legacy_generation.py  legacy_profile.py  parquet_dataset.py  trino_profile.py
src/test_data_agent/compat/: __init__.py  commands.py  legacy_generation.py  legacy_outputs.py  legacy_spec.py  legacy_workflows.py
src/test_data_agent/core/: __init__.py  constraint.py  dataset.py  distribution.py  entity.py  field.py  limits.py  privacy.py  relationship.py  serialization.py  settings.py
src/test_data_agent/generation/: __init__.py  constraint_solver.py  entity_generator.py  planner.py
src/test_data_agent/io/: __init__.py  artifacts.py  commands.py  legacy_workflows.py  readers.py  workflows.py  writers.py
src/test_data_agent/profiling/: __init__.py  cache.py  constraint_miner.py  distribution_profiler.py  relationship_profiler.py  schema_profiler.py
src/test_data_agent/rules/: __init__.py  business_config.py  conditions.py  contract.py  engine.py  expressions.py  models.py  scenarios.py  validation.py
src/test_data_agent/validation/: __init__.py  constraint_validator.py  reconciliation.py  relationship_validator.py  schema_validator.py
tests/: test_agent.py  test_ai_trino_workflow.py  test_audit.py  test_business_rules.py  test_cli.py  test_compat_legacy.py  test_constraint_miner.py  test_constraint_solver.py  test_constraint_validator.py  test_csv_profiler.py  test_dataset_spec_contract.py  test_documentation.py  test_domain_agnostic_pipeline.py  test_domain_agnostic_refactor_script.py  test_generator.py  test_io_commands.py  test_io_workflows.py  test_limits.py  test_mcp_generator_server.py  test_mcp_trino_server.py  test_privacy_corpus.py  test_property_safety.py  test_pypi_artifacts.py  test_release_artifacts.py  test_safety.py  test_source_adapters.py  test_version.py
tests/fixtures/: customers.csv  privacy_detection_cases.json
tests/fixtures/example_dataset/: customers.csv  orders.csv
tests/integration/: test_trino_integration.py
tests/snapshots/: masked_row.json
