[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-data-agent"
version = "0.3.0"
description = "Safe deterministic synthetic test data generation agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=25.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.7.0",
    "pyarrow>=15.0.0",
    "PyYAML>=6.0.0",
    "sqlglot>=30.0.0",
    "trino>=0.330.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py311"

[tool.coverage.run]
source = ["test_data_agent"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[project.scripts]
test-data-agent = "test_data_agent.cli:main"
test-data-agent-mcp-generator = "test_data_agent.mcp_generator_server:main"
test-data-agent-mcp-trino = "test_data_agent.mcp_trino_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/test_data_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
