[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "agent-paranoid-android"
version = "0.6.0"
description = "Safety-first synthetic data generation agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "agent",
    "csv",
    "mcp",
    "pii",
    "synthetic-data",
    "test-data",
    "trino",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "faker>=25.0.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
parquet = [
    "pyarrow>=15.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
trino = [
    "sqlglot>=30.0.0",
    "trino>=0.330.0",
]
all = [
    "mcp>=1.0.0",
    "pyarrow>=15.0.0",
    "sqlglot>=30.0.0",
    "trino>=0.330.0",
]
dev = [
    "hatchling==1.31.0",
    "hypothesis>=6.100.0",
    "mypy>=2.3.0",
    "pip-audit>=2.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.0",
    "types-PyYAML>=6.0.12",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1,<2.0.0",
]

[tool.uv]
required-version = ">=0.11.23,<0.12"

[tool.ruff]
target-version = "py311"

[tool.coverage.run]
source = ["test_data_agent"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
files = [
    "src/test_data_agent/core",
    "src/test_data_agent/generation",
    "src/test_data_agent/rules",
    "src/test_data_agent/validation",
    "src/test_data_agent/mcp_generator_server.py",
]
strict = true
follow_imports = "silent"
show_error_codes = true
warn_unused_configs = true

[project.scripts]
test-data-agent = "test_data_agent.cli:main"
test-data-agent-mcp-generator = "test_data_agent.mcp_generator_server:main"
test-data-agent-mcp-trino = "test_data_agent.mcp_trino_server:main"

[project.urls]
Homepage = "https://github.com/wa-pis/agent-paranoid-android"
Repository = "https://github.com/wa-pis/agent-paranoid-android"
Documentation = "https://wa-pis.github.io/agent-paranoid-android/"
Issues = "https://github.com/wa-pis/agent-paranoid-android/issues"
Changelog = "https://github.com/wa-pis/agent-paranoid-android/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/wa-pis/agent-paranoid-android/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/test_data_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require a live local service",
]
